# mono-ai-service-starter

./: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: main.yaml
docker/: Dockerfile  Dockerfile.serverless
infrastructure/: main.tf  outputs.tf  terraform.tf
scripts/: README.md  build_and_push.sh  build_image.sh  push_image_to_acr.sh
train/: evaluate.py  main.py  preprocess.py  settings.py  trainer.py
train/llm/: __init__.py  gemma.py
